--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
+	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/notification.css" />
@@ -27,7 +28,7 @@
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<section class="container" id="main-container">
 			<div class="section">
-				<div class="container" style="width: 100%;">
+				<div class="container container-narrow" style="width: 100%;">
 					<div class="card is-horizontal messages-card" th:each="convo : ${conversations}"
 						th:onclick="viewMessageDetail(this, [[${convo.id}]])">
 						<div class="card-image">
@@ -74,6 +75,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
