--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -13,6 +13,7 @@
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
+	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{register.title}"></title>
 </head>
@@ -113,6 +114,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register-oauth.js"></script>
