--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
+	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/user-profile.css" />
 	<title th:value="${user.firstName}"></title>
@@ -34,6 +35,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/tools/get-text.js"></script>
