--- a/src/main/resources/templates/liked-users.html
+++ b/src/main/resources/templates/liked-users.html
@@ -28,7 +28,7 @@
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<section class="container" id="main-container">
 			<div class="section">
-				<div class="container" style="width: 100%;">
+				<div class="container container-narrow" style="width: 100%;">
 					<div class="card is-horizontal notification-card" th:each="user : ${users}" style="width: 100%;"
 						th:onclick="viewProfile([[${user.idEncoded}]])">
 						<div class="card-image">
@@ -64,6 +64,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
