--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{password-change.title}"></title>
 </head>
@@ -60,6 +61,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/check-password.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/modal.js"></script>
