--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
+	<link rel="stylesheet" href="/css/lib/animate.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/search.css" />
@@ -131,6 +132,7 @@
 	<script src="/js/lib/bulma-slider.min.js"></script>
 	<script src="/js/lib/leaflet.min.js"></script>
 	<script src="/js/lib/modal-fx.min.js"></script>
+	<script src="/js/lib/bulma-toast.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
