--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div id="main">
-		<header th:insert="fragments.html::header-logged-out"></header>
+		<header th:insert="fragments.html::header-logged-in"></header>
 		<div class="section">
 			<div class="container">
 				<div class="column">
@@ -28,28 +28,19 @@
 							<input id="token" type="hidden" th:value="${tokenString}">
 							<div class="field">
 								<div class="control">
-									<input class="input" type="email" th:placeholder="#{email}"
-										id="email" autofocus="" required>
+									<label class="label" th:text="#{email}"></label>
+									<input class="input" type="email" id="email" autofocus="" required>
 								</div>
 							</div>
 							<div class="field">
 								<div class="control">
-									<input class="input" type="password" th:placeholder="#{new-password}"
-										id="password" required>
+									<label class="label" th:text="#{new-password}"></label>
+									<input class="input" type="password" id="password" required>
 								</div>
+								<div id="password-info" th:text="#{password-change.warning}" style="font-size:0.8em; color: red;">
 							</div>
-							<div class="field">
-								<div class="control">
-									<input class="input" type="password" id="password-repeat"
-										th:placeholder="#{password-repeat}" required>
-								</div>
-							</div>
-							<div class="notification is-danger" id="password-info"
-								th:text="#{password-change.warning}"></div>
-							<input id="tokenString" type="hidden">
-							<button class="button" th:text="#{submit}"></button>
-
 						</div>
+						<button class="button" th:text="#{submit}"></button>
 					</form>
 				</div>
 			</div>
