--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -27,12 +27,12 @@
 						<form th:action="@{/password/reset}" method="POST" id="form">
 							<div class="field">
 								<div class="control">
-									<input class="input" type="email" th:placeholder="#{email}"
-										autofocus="" name="email" id="email" required>
+									<label class="label" th:text="#{email}"></label>
+									<input class="input" type="email" autofocus="" name="email" id="email" required>
 								</div>
 							</div>
 							<div th:replace="fragments.html::captcha"></div>
-							<button class="button" th:text="#{submit}"></button>
+							<button class="button is-info colored" th:text="#{submit}"></button>
 						</form>
 					</div>
 				</div>
