--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -281,9 +281,8 @@
 
 		<th:block th:each="user : ${dto.users}">
 			<div class="user-search-card" th:id="${user.idEncoded}">
-				<div class="swiper-container " th:id="${user.idEncoded}">
+				<div class="swiper swiper-container" th:id="${user.idEncoded}">
 					<div class="swiper-wrapper">
-
 						<div class="swiper-slide colored"
 							style="background-color: #48c774; display: flex; align-items: center; justify-content: center">
 							<i class="fa fa-thumbs-up fa-10x"></i>
