--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -41,6 +41,13 @@
 						<span th:text="#{profile.webpush}"></span>
 					</div>
 				</div>
+				
+				<div class="field center-parent">
+				<div class="left first-name" style="font-size: 2em" th:text="${user.firstName}"></div>
+				<div class="left" style="font-size: 1.5em; padding-top: 8px;">
+					<span>, </span><span th:text="${user.age}"></span>
+				</div>
+				</div>
 
 				<div style="padding-bottom: 24px;"></div>
 
