Add warning to intention in onboarding

--- a/src/main/resources/static/css/profile-onboarding.css
+++ b/src/main/resources/static/css/profile-onboarding.css
@@ -59,6 +59,12 @@ textarea {
 	display: none;
 }
 
+#intention-warning {
+	padding-top: 24px;
+	font-size: 0.7em;
+	opacity: 0.5;
+}
+
 @media screen and (min-height: 550px) {
 	.onboarding-icon {
 		display: block;
