--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -226,7 +226,7 @@
 								<input class="input" pattern="[a-zA-Z0-9-]{3,30}" id="interest" name="value"
 									style="flex: 1" th:placeholder="#{interest}" maxlength="30" required>
 								<div style="padding-top: 4px;"></div>
-								<button class="button is-info is-outlined" style="margin-left: 4px;">
+								<button class="button is-info is-outlined" style="margin-left: 4px; margin-right: 4px;">
 									<i class="fa fa-plus"></i>
 								</button>
 								<i class="fa-lg fas fa-question-circle" style="cursor:pointer;" onclick="interestInfo()"></i>
