--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -26,8 +26,8 @@
 				<h2 th:text="#{email} + ':'"></h2>
 				<a href= "mailto:contact@alovoa.com">contact@alovoa.com</a>
 			</div>
-			<div style="margin-bottom: 1.5rem;">
-				<header class="card-header collapsible-header">
+			<div class="card" style="margin-bottom: 1.5rem;">
+				<header class="card-header collapsible-header always-collapse">
 					<a href="#collapsible-card" data-action="collapse" class="card-header-icon full-width" 
 					aria-label="more options" style="padding: 1.25rem; display: flex; justify-content: space-between;">
 						<span class="label" style="margin-bottom: initial;" th:text="#{contact}"></span>
